--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-contentful": "^2.3.14",
     "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-source-firestore": "^1.0.3",
     "gatsby-transformer-remark": "^2.8.14",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
